Fixed: wsp-import of external gml-tins fails Fixed: let user choose coordinate system when importing external shapes/hmos